Solved? overflow on devices with 'large font size' setting.

--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -166,6 +166,8 @@ a {
 .schedule-band-link {
     text-decoration: underline;
     color: var(--clr-text-100) !important;
+    word-break: break-word;
+
 }
 
 .progfest-ticket-button {
@@ -1098,6 +1100,7 @@ a {
  }
 
  .progFest-grid img {
+    display: block;
     width: 100%;
     height: auto;
     border-radius: 3px;
@@ -1139,6 +1142,7 @@ a {
     align-items: start;
     gap: 24px;
     padding-bottom: .7em;
+ 
  }
 
  .progFest-text-grid--performers:not(:last-child)::after {
@@ -1155,19 +1159,23 @@ a {
 
  .progFest-text-grid {
     display: grid;
-    grid-template-columns: 75px 1fr;
+    grid-template-columns: minmax(75px, auto) 1fr;
     align-items: start;
+    gap: 1rem;
+    overflow-wrap: break-word;
  }
 
  .progFest-text-grid--performers a {
     font-size: .9rem;
     color: var(--clr-text-200) !important;
     font-weight: 400;
+
  }
  
  
  .progFest-text-grid a {
     color: var(--clr-main);
+  
  }
  
  .progFest-text-grid--performers + .progFest-text-grid--performers{
@@ -1227,8 +1235,12 @@ a {
 
  @media (max-width: 768px) {
     body {
-      font-size: 14px; 
+      font-size: 16px; 
     }
+
+    html {
+        font-size: 16px; 
+      }
   }
 
  @media screen and (max-width: 716px) {
@@ -1238,9 +1250,26 @@ a {
 }
 
 @media screen and (max-width: 500px) {
+
+    .progFest-text-grid,
     .progFest-text-grid--performers {
         grid-template-columns: 1fr;
         gap: 6px;
+     }
+
+     .progFest-text-grid {
+        position: relative;
+     }
+
+     .progFest-text-grid:not(:last-child)::after {
+        content: "";
+        position: absolute;
+        bottom: -3px;
+        left:0;
+        height: 1px;
+        width: 100%;
+        background: var(--clr-main);
+        opacity: .2;
      }
 }
 
